--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="title">
-    <h2> Contacts </h2>
+    <h2> {{title}} </h2>
   </div>
   <main>
     <router-outlet></router-outlet>
